--- a/TaxiAggregator-iOS/Resources/Info.plist
+++ b/TaxiAggregator-iOS/Resources/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>By accessing your location, this app can find you a good place to eat.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -15,8 +13,6 @@
 	<array>
 		<string>Rubik-Regular.ttf</string>
 	</array>
-	<key>NSLocationUsageDescription</key>
-	<string>By accessing your location</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -57,5 +53,11 @@
 		<string>googlechromes</string>
 		<string>comgooglemaps</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>By accessing your location, this app can find you a cheapest taxi.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>By accessing your location, this app can find you a cheapest taxi.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>By accessing your location, this app can find you a cheapest taxi.</string>
 </dict>
 </plist>
