TA-3: Make screen "Onboarding" 1) add page control & buttons to move to next/prev page 2) add fonts to resources

--- a/TaxiAggregator-iOS/Resources/Info.plist
+++ b/TaxiAggregator-iOS/Resources/Info.plist
@@ -11,6 +11,8 @@
 	<string>Light</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>HelveticaNeue-Regular.ttf</string>
+		<string>Avenir-Medium.ttf</string>
 		<string>Rubik-Regular.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
