- fix issue: using wrong font

--- a/TaxiAggregator-iOS/Resources/Info.plist
+++ b/TaxiAggregator-iOS/Resources/Info.plist
@@ -11,7 +11,7 @@
 	<string>Light</string>
 	<key>UIAppFonts</key>
 	<array>
-		<string>HelveticaNeue-Regular.ttf</string>
+		<string>HelveticaNeue.ttf</string>
 		<string>Avenir-Medium.ttf</string>
 		<string>Rubik-Regular.ttf</string>
 	</array>
