--- a/TaxiAggregator-iOS/Resources/Info.plist
+++ b/TaxiAggregator-iOS/Resources/Info.plist
@@ -14,6 +14,7 @@
 		<string>HelveticaNeue.ttf</string>
 		<string>Avenir-Medium.ttf</string>
 		<string>Rubik-Regular.ttf</string>
+		<string>Rubik-Medium.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
